--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,8 +350,11 @@ main {
 }
 
 .info-content .title {
-  color: var(--white-1);
-  background: var(--onyx);
+  color: var(--orange-yellow-crayola);
+  background: var(--border-gradient-onyx);
+  box-shadow: var(--shadow-2);
+  transition: var(--transition-1);
+  z-index: 1;
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
   width: max-content;
@@ -1841,6 +1844,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .sidebar-info { flex-direction: column; }
 
   .avatar-box img { width: 150px; }
+  .avatar-box img { height: 250px; }
 
   .info-content .name {
     white-space: nowrap;
