--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1347,7 +1347,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .avatar-box { border-radius: 30px; }
 
-  .avatar-box img { width: 120px; }
+  .avatar-box img { width: 110px; }
 
   .info-content .name { margin-bottom: 15px; }
 
@@ -1843,8 +1843,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { flex-direction: column; }
 
-  .avatar-box img { width: 150px; }
-  .avatar-box img { height: 250px; }
+  .avatar-box img { width: 150px; height: 150px;}
 
   .info-content .name {
     white-space: nowrap;
